# Rubik-s-Cube-Solver

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  rubiks_cube_solver.sln  rubiks_cube_solver.vcxproj  rubiks_cube_solver.vcxproj.filters
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.h  NibbleArray.cpp  PatternDatabase.cpp
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
